ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: host-ingress
spec:
  rules:
    - host: alpaca.kubernetes.phirmware.me
      http:
        paths:
          - backend:
              serviceName: alpaca
              servicePort: 8080
    - host: bandicoot.kubernetes.phirmware.me
      http:
        paths:
          - backend:
              serviceName: bandicoot
              servicePort: 8080
    - host: be-default.kubernetes.phirmware.me
      http:
        paths:
          - backend:
              serviceName: be-default
              servicePort: 8080
